adjust sample•